tests/errors/err_list_at_mut_missing_bang.mix
// ERROR: method 'at_mut' is mutating; call it as `at_mut!(...)`
main()
    nums! = [1, 2]
    print(nums.at_mut(0))
